--- a/app.yaml
+++ b/app.yaml
@@ -1,18 +1,4 @@
-# Copyright 2015 Google, Inc
-#
-# Licensed under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-#
-#     http://www.apache.org/licenses/LICENSE-2.0
-#
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-
-# [START gae_flex_quickstart_yaml]
+# [START]
 runtime: ruby
 env: flex
 entrypoint: bundle exec ruby app.rb
@@ -28,4 +14,4 @@ resources:
   memory_gb: 0.5
   disk_size_gb: 10
 
-# [END gae_flex_quickstart_yaml]
+# [END]
